service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
spec:
  selector:
    app: gogs
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
  - protocol: TCP
    port: 22
    targetPort: ssh
    name: ssh
